--- a/react-frontend/src/components/Chat/Chat.scss
+++ b/react-frontend/src/components/Chat/Chat.scss
@@ -1,3 +1,141 @@
+// CHANNEL ROOM SELECTOR STYLE
+.wrapper {
+    .room {
+        // background-color: #29b6f6;
+        color: white;
+
+        &-title {}
+
+        &-subtitle {}
+
+        &-wrapper {
+            display: flex;
+            overflow-x: auto;
+            // flex-wrap: wrap;
+            // justify-content: center;
+        }
+
+        &-form {
+            display: flex;
+
+            &-wrapper {
+                width: 100%;
+                margin: 10px;
+            }
+
+            &-btn {
+                position: relative;
+                padding: 0 30px;
+                border-radius: 15px;
+                border: 1px solid rgba(163, 163, 163, 0.2);
+                background-color: #29b6f6;
+                transition: all 0.4s ease-in-out;
+                // -webkit-backdrop-filter: blur(5px) saturate(180%);
+                // backdrop-filter: blur(5px) saturate(180%);
+
+                &:hover,
+                &:focus {
+                    background-color: white;
+                    transition: all 0.4s ease-in-out;
+
+                    .room-form-title {
+                        background-color: #29b6f6;
+                        transition: all 0.4s ease-in-out;
+                    }
+                }
+            }
+
+            &-img {
+                width: 100px;
+                padding-bottom: 20px;
+            }
+
+            &-title {
+                border-top: 1px solid black;
+                width: 100%;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                background-color: white;
+                border-radius: 0 0 15px 15px;
+                transition: all 0.4s ease-in-out;
+                pointer-events: none;
+
+                &-text {
+                    color: black;
+                    text-transform: capitalize;
+                }
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 996px) {
+    .wrapper {
+        .room {
+            &-wrapper {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            &-form {
+                &-wrapper {
+                    width: 100%;
+                    margin: 10px;
+                }
+
+                &-btn {
+                    position: relative;
+                    padding: 0 50px;
+                    border-radius: 15px;
+                    border: 1px solid rgba(163, 163, 163, 0.2);
+                    background-color: #29b6f6;
+                    transition: all 0.4s ease-in-out;
+                    // -webkit-backdrop-filter: blur(5px) saturate(180%);
+                    // backdrop-filter: blur(5px) saturate(180%);
+
+                    &:hover,
+                    &:focus {
+                        background-color: white;
+                        transition: all 0.4s ease-in-out;
+
+                        .room-form-title {
+                            background-color: #29b6f6;
+                            transition: all 0.4s ease-in-out;
+                        }
+                    }
+                }
+
+                &-img {
+                    width: 150px;
+                    padding-bottom: 20px;
+                }
+
+                &-title {
+                    border-top: 1px solid black;
+                    width: 100%;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    background-color: white;
+                    border-radius: 0 0 15px 15px;
+                    transition: all 0.4s ease-in-out;
+                    pointer-events: none;
+
+                    &-text {
+                        color: black;
+                        text-transform: capitalize;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
 // ACTUAL CHATROOM STYLING
 .wrapper {
     background-color: rgba(0, 0, 0, 0.95);
@@ -59,23 +197,9 @@
 
             &-input {
                 border-radius: 15px;
-                outline: none;
-                border: none;
                 background-color: rgba(0, 0, 0, 0.95);
                 color: white;
-                margin-left: 5px;
                 caret-color: #29b6f6;
-
-                &:hover,
-                &:focus {
-                    border: 2px solid #29b6f6;
-                }
-
-                padding: {
-                    top: 3px;
-                    bottom: 3px;
-                    left: 15px;
-                }
 
                 &::placeholder {
                     color: rgba(189, 187, 187, 0.7);
@@ -143,78 +267,5 @@
                 }
             }
         }
-    }
-}
-
-
-// CHANNEL ROOM SELECT STYLE
-.wrapper {
-    .room {
-        color: white;
-
-        &-title {}
-
-        &-subtitle {}
-
-        &-wrapper {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        &-form {
-            display: flex;
-
-            &-wrapper {
-                width: 100%;
-                margin: 10px;
-            }
-
-            &-btn {
-                position: relative;
-                padding: 0 50px;
-                border-radius: 15px;
-                border: 1px solid rgba(163, 163, 163, 0.2);
-                background-color: #29b6f6;
-                transition: all 0.4s ease-in-out;
-                // -webkit-backdrop-filter: blur(5px) saturate(180%);
-                // backdrop-filter: blur(5px) saturate(180%);
-
-                &:hover,
-                &:focus {
-                    background-color: white;
-                    transition: all 0.4s ease-in-out;
-
-                    .room-form-title {
-                        background-color: #29b6f6;
-                        transition: all 0.4s ease-in-out;
-                    }
-                }
-            }
-
-            &-img {
-                width: 150px;
-                padding-bottom: 20px;
-            }
-
-            &-title {
-                border-top: 1px solid black;
-                width: 100%;
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                background-color: white;
-                border-radius: 0 0 15px 15px;
-                transition: all 0.4s ease-in-out;
-                pointer-events: none;
-
-                &-text {
-                    color: black;
-                    text-transform: capitalize;
-                }
-            }
-        }
-
     }
 }
