--- a/react-frontend/src/components/Chat/Chat.scss
+++ b/react-frontend/src/components/Chat/Chat.scss
@@ -1,7 +1,6 @@
 // CHANNEL ROOM SELECTOR STYLE
 .wrapper {
     .room {
-        // background-color: #29b6f6;
         color: white;
 
         &-title {}
@@ -11,8 +10,6 @@
         &-wrapper {
             display: flex;
             overflow-x: auto;
-            // flex-wrap: wrap;
-            // justify-content: center;
         }
 
         &-form {
@@ -30,8 +27,6 @@
                 border: 1px solid rgba(163, 163, 163, 0.2);
                 background-color: #29b6f6;
                 transition: all 0.4s ease-in-out;
-                // -webkit-backdrop-filter: blur(5px) saturate(180%);
-                // backdrop-filter: blur(5px) saturate(180%);
 
                 &:hover,
                 &:focus {
@@ -93,8 +88,6 @@
                     border: 1px solid rgba(163, 163, 163, 0.2);
                     background-color: #29b6f6;
                     transition: all 0.4s ease-in-out;
-                    // -webkit-backdrop-filter: blur(5px) saturate(180%);
-                    // backdrop-filter: blur(5px) saturate(180%);
 
                     &:hover,
                     &:focus {
@@ -184,6 +177,9 @@
                 color: white;
             }
 
+            &-ref {
+                height: 60px;
+            }
         }
 
         &-form {
@@ -203,11 +199,6 @@
                 caret-color: #29b6f6;
                 border: none;
                 outline: none;
-
-                &::placeholder {
-                    color: rgba(189, 187, 187, 0.7);
-                    font-weight: 500;
-                }
             }
 
             &-btn {
