--- a/react-frontend/src/components/Chat/Chat.scss
+++ b/react-frontend/src/components/Chat/Chat.scss
@@ -42,6 +42,7 @@
 
             .active-btn {
                 background-color: white !important;
+                transform: scale(1.08);
             }
 
             &-img {
