--- a/react-frontend/src/components/Login/Login.scss
+++ b/react-frontend/src/components/Login/Login.scss
@@ -1,5 +1,4 @@
 .user-container {
-    background: linear-gradient(to right, #141e30, #243b55);
     width: 100vw;
     height: 100vh;
     display: grid;
@@ -14,8 +13,6 @@
     }
 
     &-header {
-        background-color: #10a8df;
-        color: black;
         padding: 40px !important;
         padding-bottom: 0 !important;
         border-radius: 10px 0 0 10px;
@@ -32,10 +29,8 @@
     &-form {
         width: 50vw;
         display: grid;
-        background: black;
         padding: 50px !important;
         font-size: 1vw;
-        color: white;
         border-radius: 0 10px 10px 0;
         display: flex;
         flex-wrap: wrap;
@@ -59,7 +54,6 @@
             }
 
             &:focus {
-                border: 2px solid #10a8df;
                 transition: all 0.1s ease-in-out;
             }
         }
@@ -68,52 +62,41 @@
             justify-content: flex-end;
             text-align: right;
             width: 85%;
-
-            a {
-                color: white;
-                font-size: 14px;
-            }
+            font-size: 16px;
         }
 
         &-btn {
             font-weight: 500;
             text-align: center;
             font-size: 18px !important;
-            background-color: #10a8df !important;
             font-weight: 500 !important;
             letter-spacing: .3px;
             height: 50px;
             width: 70%;
             font-size: medium;
-            color: white;
             border-radius: 8px;
             transition: all 0.3s ease-in-out;
 
             &:hover {
-                background-color: #fff !important;
                 transition: all 0.3s ease-in-out;
+            }
+
+            &:focus {
+                box-shadow: none;
             }
         }
 
         &-create {
-            color: white;
             font-size: 16px;
             letter-spacing: .4px;
             width: 100%;
             text-align: center;
-
-            a {
-                color: white;
-            }
-
-            span {
-                color: #10a8df;
-            }
         }
     }
 }
 
 @media only screen and (max-width: 425px) {
+
     .login {
         &-container {
             width: 80% !important;
@@ -159,6 +142,13 @@
 
 
 // SIGNUP STYLING
+.user-container-signup {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    align-items: center;
+}
+
 .signup {
     &-container {
         width: 50% !important;
@@ -166,8 +156,6 @@
     }
 
     &-header {
-        background-color: black;
-        color: white;
         padding: 40px !important;
         padding-bottom: 0 !important;
         border-radius: 10px 0 0 10px;
@@ -184,10 +172,8 @@
     &-form {
         width: 50vw;
         display: grid;
-        background: #10a8df;
         padding: 50px !important;
         font-size: 1vw;
-        color: black;
         border-radius: 0 10px 10px 0;
         display: flex;
         flex-wrap: wrap;
@@ -211,7 +197,6 @@
             }
 
             &:focus {
-                border: 2px solid black;
                 transition: all 0.1s ease-in-out;
             }
         }
@@ -220,7 +205,6 @@
             font-weight: 500;
             text-align: center;
             font-size: 18px !important;
-            background-color: white !important;
             font-weight: 500 !important;
             letter-spacing: .3px;
             height: 50px;
@@ -231,26 +215,19 @@
             transition: all 0.3s ease-in-out;
 
             &:hover {
-                background-color: black !important;
-                color: white;
                 transition: all 0.3s ease-in-out;
+            }
+
+            &:focus {
+                box-shadow: none;
             }
         }
 
         &-login {
-            color: white;
             font-size: 16px;
             letter-spacing: .4px;
             width: 100%;
             text-align: center;
-
-            a {
-                color: black;
-            }
-
-            span {
-                color: white;
-            }
         }
     }
 }
