Logouut button added

--- a/react-frontend/src/components/Chat/Chat.scss
+++ b/react-frontend/src/components/Chat/Chat.scss
@@ -173,7 +173,7 @@
             }
 
             &-ref {
-                height: 60px;
+                height: 90px;
             }
         }
 
@@ -243,6 +243,10 @@
 
                 &-userinput {
                     width: 95% !important;
+                }
+
+                &-ref {
+                    height: 60px;
                 }
             }
 
